# Python-Code-Challenges

Hangman/: hangman.py
docs/: booleans.py  conceptsToLearn.txt  strings.py
flask-web-api/: app.py  db.sqlite
guess_the_number/: guess_the_number.py
roll_dice/: roll_dice.py
thousands_separator/: thousands.py
weather_app/: README.rst  pyproject.toml
weather_app/app/: __init__.py
weather_app/app/weather/: __init__.py
weather_app/app/weather/routes/: routes.py
weather_app/app/weather/static/css/: weather.css
weather_app/app/weather/static/js/: index.js
weather_app/app/weather/templates/: weather.html
weather_app/weather_app/: poetry_commands.txt  run.py
weather_app/weather_app/app/: config.py
weather_app/weather_app/app/weather/: open_weather.py
