[tool.poetry]
name = "flask-boilerplate"
version = "0.1.0"
description = ""
authors = ["Matheus <matheusdev20@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
requests = "^2.27.1"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
